<resources>
    <string name="app_name">RegistrationPage</string>
    <string name="welcome_user">Welcome User</string>
    <string name="please_enter_your_details">Please enter your details.</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="day">DD</string>
    <string name="month">MM</string>
    <string name="year">YYYY</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_id">Email ID</string>
    <string name="submit">Submit</string>
    <string name="date_of_birth">Date Of Birth</string>
</resources>