<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Intro"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="110dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/welcome_user"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Intro2"
        android:layout_width="234dp"
        android:layout_height="28dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="@font/acme"
        android:text="@string/please_enter_your_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Intro" />

    <TextView
        android:id="@+id/name"
        android:layout_width="71dp"
        android:layout_height="27dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/allerta"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Intro2" />

    <EditText
        android:id="@+id/FullName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="356dp"
        android:layout_height="38dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:fontFamily="@font/aleo"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Intro2" />

    <EditText
        android:id="@+id/Day"
        android:layout_width="118dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/day"
        android:inputType="number"
        android:textColor="#000000"
        android:fontFamily="@font/aleo"
        app:layout_constraintEnd_toStartOf="@+id/Month"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullName" />

    <EditText
        android:id="@+id/Month"
        android:layout_width="118dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/month"
        android:inputType="number"
        android:textColor="#000000"
        android:fontFamily="@font/aleo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullName" />

    <EditText
        android:id="@+id/Year"
        android:layout_width="118dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="number"
        android:textColor="#000000"
        android:fontFamily="@font/aleo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Month"
        app:layout_constraintTop_toBottomOf="@+id/FullName" />

    <TextView
        android:id="@+id/DOB"
        android:layout_width="120dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/allerta"
        android:text="@string/date_of_birth"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FullName" />

    <EditText
        android:id="@+id/emailID"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="356dp"
        android:layout_height="38dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/rounded_corner_text"
        android:ems="10"
        android:fontFamily="@font/aleo"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Month"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email"
        android:layout_width="75dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/allerta"
        android:text="@string/email_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Month" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Submit"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="276dp"
        android:layout_height="44dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/rounded_corner_button"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>